# tasks

./: .gitignore  package-lock.json
.github/workflows/: api.yml  destroy.yml  infrastructure.yml  ui.yml
infrastructure/: cf_tasks.yml
services/tasks_api/: config.py  create_dynamodb_locally.py  docker-compose.yml  main.py  models.py  pyproject.toml  schemas.py  serverless.yml  store.py  tests.py
services/tasks_api/resources/: cognito.yml  dynamodb.yml
services/tasks_ui/: package-lock.json  package.json  serverless.yml  vite.config.js
services/tasks_ui/src/: aws-exports.js
