[project]
name = "tasks-api"
version = "0.1.0"
description = ""
authors = [
    {name = "JoachimVanderbeke_CloudsOfCare",email = "joachim.vanderbeke@cloudsofcare.com"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-cov = "^6.1.1"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
bandit = "^1.8.3"

