[project]
name = "tasks-api"
version = "0.1.0"
description = ""
authors = [
    {name = "JoachimVanderbeke_CloudsOfCare",email = "joachim.vanderbeke@cloudsofcare.com"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "httpx (>=0.28.1,<0.29.0)",
    # "magnum (>=20.0.0,<21.0.0)", typo wrong project
    "mangum (>=0.19.0,<0.20.0)",
    "boto3 (>=1.38.36,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-cov = "^6.1.1"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
bandit = "^1.8.3"
moto = "^5.1.6"
poetry-plugin-export = "^1.4.0"


